style/styles.css
* {
  box-sizing: border-box;
}

/* Setting REM for the rest of the document- easy to calc */
html {
  font-size: 10px;
}

/* Wrapper for the Homepage- sets the grid for homepage */
.wrapper {
  background-color: #F0F0F0;
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr;
  position: relative;
  width: 100%;
}

/* Wrapper for case study pages- sets the grid */
.wrapper_two {
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: 1fr;
  position: relative;
}


/* Top navigation grid for all pages */
.topnav {
  align-items: center;
  display: flex;
  margin-top: 2rem;
  margin-bottom: 3rem;
  padding-bottom: 3rem;
  width: 90%;
}

/* Menu link within Hamburger */
.topnav #menu_links {
  background-image: linear-gradient(#C0B3A0,#C0B3A0,#D0C3AF, #F0F0F0);
  background-size: cover;
  display: none;
  flex-direction: column;
  font-family: "Josefin Sans";
  font-size: 2.8rem;
  line-height: 6rem;
  list-style: none;
  padding-bottom: 2rem;
  padding-left: 2.3rem;
  padding-right: 2.3rem;
  padding-top: 1rem;
  position: absolute;
  text-align: center;
  top: 5rem;
  width: 100%;
}

/* Link style for navigation */
.topnav a {
  text-decoration: none;
  color: #ffffff;
}

/* Visited link style */
.topnav a:visited {
  text-decoration: none;
  color: #ffffff;
}

/* Visited link style */
.topnav a:hover {
  text-decoration: none;
  color: #E14658;
}

.logo {
  background-image: url(../Images/logo.png);
  background-size: 100% 100%;
  background-repeat: no-repeat;
  height: 3.2rem;
  margin-right: auto;
  position: absolute;
  top: 2rem;
  left: 5%;
  width: 6rem;
}

/* Hambuger Menu Button */
button {
  background: #F0F0F0;
  border: 0;
  cursor: pointer;
  margin-left: auto;
  position: absolute;
  padding: 0;
  right: 5%;
  top: 2rem;
}

.CS {
  background: white;
}

/* Styling for the Hamburger Menu */
.topnav .bar-1, .bar-2, .bar-3 {
  background-color: #333333;
  height: .5rem;
  margin: .6rem 0;
  position: relative;
  transition: 0.4s;
  width: 3.5rem;
}

/* Rotate first bar */
.change .bar-1 {
  -webkit-transform: rotate(-45deg) translate(-.9rem, .6rem) ;
  transform: rotate(-45deg) translate(-.9rem, .6rem) ;
}

/* Fade out the second bar */
.change .bar-2 {
  opacity: 0;
}

/* Rotate last bar */
.change .bar-3 {
  -webkit-transform: rotate(45deg) translate(-.9rem, -.7rem) ;
  transform: rotate(45deg) translate(-.9rem, -.7rem) ;
}

/* Header for homepage- grid set up */
.main_page {
  align-items: center;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  width: 100%;
  background-color: #F0F0F0;
}

/* Header for case study pages */
.project_version {
  align-items: center;
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(4, 1fr);
  width: 100%;
  padding-bottom: 3rem;
}

/* Styling for all call to action buttons */
.pink-button {
  align-items: center;
  background-color: #E14658;
  border-radius: 4%;
  box-shadow: 2.5px 2.5px 8px #88888880;
  color: #ffffff;
  display: grid;
  font-size: 1.8rem;
  font-family: "Lato", sans-serif;
  font-weight: 200;
  grid-column: 1 / -1;
  height: 4rem;
  text-align: center;
  width: 16.5rem;
}

/* Hompage mountain image */
.main_img {
  display: grid;
  grid-column: 1 / -1;
}

/* Stying and placement for all pink color blocks */
.pink-color-block {
  display: grid;
  grid-column: 1 / 2;
  background-color: #E14658;
  width: 6rem;
  height: .4rem;
  align-self: start;
  margin-top: 2rem;
  margin-right: 1rem;
}

.heading_section {
  display: grid;
  grid-column: 1 / -1;
  width: 90%;
  justify-self: center;
}

/* Introduction H1 and H3 title and description for homepage*/
.intro_header {
  align-self: center;
  align-self: start;
  display: grid;
  grid-column: 2 / 4;
}

/* Introduction H1 and H3 title and description for case study pages */
.intro_header_two {
  display: grid;
  grid-column: 1 / -1;
  width: 90%;
  justify-self: center;
}

h1 {
  color: #333333;
  font-family: "Josefin Sans", sans-serif;
  font-size: 4.6rem;
  font-weight: 500;
  letter-spacing: 0.05rem;
  margin-bottom: 0;
  margin-top: 0;
}

h2 {
  color: #333333;
  font-family: "Josefin Sans", sans-serif;
  font-size: 3.6rem;
  font-weight: 500;
}

h3 {
  color: #333333;
  font-size: 2.4rem;
  font-family: "Josefin Sans", sans-serif;
  line-height: 3.6rem;
  font-weight: 300;
}

h4 {
  color: #333333;
  font-family: "Lato", sans-serif;
  font-size: 2rem;
  font-weight: 300;
}

h5 {
  color: #333333;
  font-family: "Lato", sans-serif;
  font-size: 1.8rem;
  font-weight: 400;
  margin: 0;
  padding-bottom: 3rem;
  padding-top: 3rem;
}

h6 {
  color: #666666;
  font-family: "Lato", sans-serif;
  font-size: 1.6rem;
  font-style: italic;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 1.5rem;
}

p {
  font-family: "Lato", sans-serif;
  font-size: 1.6rem;
  font-weight: 100;
  line-height: 2.4rem;
  margin: 0;
}

/* Eliminate styling of ul for all pages */
ul {
  list-style: none;
  padding: 0;
  line-height: 1rem;
}

/* Sets up the grid for displaying projects on the homepage */
.projects {
  align-content: center;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(28.8rem, 35rem));
  grid-gap: 3rem;
  justify-content: center;
  padding-bottom: 40rem;
  text-align: center;
}

/* Title of the project styling and grid placement */
.projects .project_title {
  display: grid;
  grid-column: 1 / -1;
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 3rem;
}

/* Link that wraps the entire dive for Fitcollect project on homepage */
.fitcollect_link {
  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
}

/* Div for Fitcollect on the homepage */
.fitcollect {
  background-image: url(../Images/FitCollect_pic_desktop.png);
  background-repeat: no-repeat;
  background-position: center;
  box-shadow: 1px 1px 10px 3px #999999;
  color: #ffffff;
  display: grid;
  height: 30rem;
  position: relative;
  width: 90%;
}
/* ... */

